14-gateway-api/AGC/main-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-service
  namespace: akkc-main-app
spec:
  selector:
    app: main-app
  ports:
  - port: 80
    targetPort: 5678
  type: ClusterIP
