14-gateway-api/AGC/main-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: akkc-http-route
  namespace: akkc-main-app
spec:
  parentRefs:
    - name: akkc-app-gateway
      namespace: akkc-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: main-app-service
          port: 80
